# ball-sim

./: CMakeLists.txt  ProjectHome.md  README  datascript.sh  headless_data_NEW.csv  headless_data_NEW.xlsx  headless_data_predictive.csv  new_data_parser.py  out_threaded0001.txt  out_threaded0002.txt  out_threaded0008.txt  out_threaded0016.txt  out_threaded0032.txt  out_threaded0064.txt  out_threaded0512.txt  out_threaded2048.txt  out_unthreaded0002.txt  out_unthreaded0004.txt  out_unthreaded0016.txt  out_unthreaded0032.txt  out_unthreaded0128.txt  out_unthreaded0512.txt  parsedata.py  threadeddata.csv
doc/: DONE  Proposal.bib  Proposal.tex  TODO  final.tex  midterm.bib  midterm.tex  presentation.tex  template.cej  template.tex
src/: AxisPlane.cc  AxisPlane.h  AxisPlane.inl  Barrier.cc  Barrier.h  CMakeLists.txt  NaiveSimulation.cc  NaiveSimulation.h  PredictiveSimulation.cc  PredictiveSimulation.h  Simulation.cc  Simulation.h  Sphere.cc  Sphere.h  Sphere.inl  glviewer.cpp  headless.cpp
trunk/: ball-sim.kdev4  data_results.txt  datascript-morespheres.sh  datascript-predictive.sh  datascript-predictive_morespheres.sh  headless_data.csv  headless_data.txt  headless_data_NEW.xlsx  headless_data_morespheres.csv  headless_data_predictive_morespheres.csv  new_data_parser.py  out_threaded0004.txt  out_threaded0128.txt  out_threaded0256.txt  out_threaded1024.txt  out_threaded4096.txt  out_unthreaded0001.txt  out_unthreaded0008.txt  out_unthreaded0064.txt  (+5 more)
trunk/src/: AxisPlane.h  Barrier.cc  Barrier.h  CMakeLists.txt  NaiveSimulation.cc  NaiveSimulation.h  PredictiveSimulation.cc  PredictiveSimulation.h  Simulation.cc  Simulation.h  Sphere.cc  Sphere.h  Sphere.inl  glviewer.cpp  headless.cpp
(+12 files in other folders)
